tdf#83720 Pivot Table: Data field should always at last place

In the pivot table dialog we should always put the "Data" field to
the last place or the cell formats won't be shown correct in the
pivot table.

Change-Id: If4befe4fff1e6f04d9b709615a1955e3b5f4b4cc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164161
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit 78065e3798439dd790d1be5ac5c219477285c888)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164126
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>